infra/k8s/overlays/prod/patch-ms-auth-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-auth
spec:
  template:
    spec:
      serviceAccountName: app
      containers:
        - name: ms-auth
          image: 027653366477.dkr.ecr.us-east-1.amazonaws.com/ms-auth:7be192c36a2be4307b3c40de1862133b31973858
          imagePullPolicy: Always
