infra/k8s/overlays/prod/patch-ms-notify-image.yaml
# Patch: imagem ECR + env + IRSA ServiceAccount. Sem AWS_STAGE o app defaulta para local e tenta localstack:4566.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-notify
spec:
  template:
    spec:
      serviceAccountName: app
      containers:
        - name: ms-notify
          image: 027653366477.dkr.ecr.us-east-1.amazonaws.com/ms-notify:0082a9c2b32c563afe83006702d4d158239f5209
          imagePullPolicy: Always
