infra/k8s/overlays/prod/patch-postgres-pull-policy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  template:
    spec:
      containers:
        - name: postgres
          imagePullPolicy: Always
