infra/k8s/overlays/prod/patch-rabbitmq-pull-policy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  template:
    spec:
      containers:
        - name: rabbitmq
          imagePullPolicy: Always
